--- a/.env
+++ b/.env
@@ -1,5 +1,28 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=""
-DB_NAME=sentiment_db
+# Recommended for most uses
+DATABASE_URL=postgres://neondb_owner:npg_7UfBIGyu5XmT@ep-square-band-a43w8blu-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
+
+# For uses requiring a connection without pgbouncer
+DATABASE_URL_UNPOOLED=postgresql://neondb_owner:npg_7UfBIGyu5XmT@ep-square-band-a43w8blu.us-east-1.aws.neon.tech/neondb?sslmode=require
+
+# Parameters for constructing your own connection string
+PGHOST=ep-square-band-a43w8blu-pooler.us-east-1.aws.neon.tech
+PGHOST_UNPOOLED=ep-square-band-a43w8blu.us-east-1.aws.neon.tech
+PGUSER=neondb_owner
+PGDATABASE=neondb
+PGPASSWORD=npg_7UfBIGyu5XmT
+
+# Parameters for Vercel Postgres Templates
+POSTGRES_URL=postgres://neondb_owner:npg_7UfBIGyu5XmT@ep-square-band-a43w8blu-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
+POSTGRES_URL_NON_POOLING=postgres://neondb_owner:npg_7UfBIGyu5XmT@ep-square-band-a43w8blu.us-east-1.aws.neon.tech/neondb?sslmode=require
+POSTGRES_USER=neondb_owner
+POSTGRES_HOST=ep-square-band-a43w8blu-pooler.us-east-1.aws.neon.tech
+POSTGRES_PASSWORD=npg_7UfBIGyu5XmT
+POSTGRES_DATABASE=neondb
+POSTGRES_URL_NO_SSL=postgres://neondb_owner:npg_7UfBIGyu5XmT@ep-square-band-a43w8blu-pooler.us-east-1.aws.neon.tech/neondb
+POSTGRES_PRISMA_URL=postgres://neondb_owner:npg_7UfBIGyu5XmT@ep-square-band-a43w8blu-pooler.us-east-1.aws.neon.tech/neondb?connect_timeout=15&sslmode=require
+
+# Neon Auth environment variables for Next.js
+NEXT_PUBLIC_STACK_PROJECT_ID=495a2ecf-3b72-4230-88d4-9cd9beb15247
+NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY=pck_er2dtqfy92k1bbw8mh8gp6g25vh16sn4677tck9w8wefg
+STACK_SECRET_SERVER_KEY=ssk_bkf7jj10q76v2evvmfx9pzkxkkfqgxtre6y28yh82vm1r
 HUGGINGFACE_API_KEY=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
